--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+openrc.sh
+terraform/states
+.terragrunt-cache
+.terraform.lock.hcl
